welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:5: error: not found: value x
        	x= x+1;
                ^Methods:11: error: not found: value x
        	while ( x!=y ) {
                        ^Methods:13: error: not found: value y
        		y=y+1;
                        ^