welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {
        	while (!estSurBiscuit) {
        	avance();
        	x= x+1;
        	}
        	if (estSurBiscuit) {
        		prendBiscuit();
        	}

        	while ( x!=y ) {
        		recule();
        		y=y+1;
        	}
        	
		poseBiscuit()
        	
        }

        for (i <- 1 to 7) {
            goAndGet();
            droite();
            avance();
            gauche();
        }
